--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/Intellicode/boilerplate#readme",
   "dependencies": {
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.3",
+    "redux": "^3.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
@@ -28,6 +30,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.2.0",
     "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1"
   }
