--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate code for a modern Javascript application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "start": "node src/server/app.js"
   },
   "repository": {
@@ -25,10 +25,14 @@
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
+    "babel-jest": "^11.0.1",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "jest-cli": "^11.0.1",
+    "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.2.0",
     "webpack": "^1.12.15",
