--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "start": "node src/server/app.js"
+    "start": "node src/server/app.js",
+    "build": "webpack --config webpack.config.prod.js --progress -p"
   },
   "jest": {
     "unmockedModulePathPatterns": [
