--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^5.0.0",
     "jest-cli": "^11.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.3.0",
