--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^3.4.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-core": "^6.7.6",
     "babel-jest": "^11.0.1",
     "babel-loader": "^6.2.4",
@@ -41,14 +42,18 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.8.0",
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^5.0.0",
     "jest-cli": "^11.0.1",
+    "postcss-loader": "^0.8.2",
+    "precss": "^1.4.0",
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1"
   }
