--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^5.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jest-cli": "^11.0.1",
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
