--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-loader": "^0.23.1",
     "eslint": "^2.8.0",
     "eslint-config-airbnb": "^7.0.0",
+    "eslint-loader": "^1.3.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^5.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -55,6 +56,9 @@
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.2.0",
     "style-loader": "^0.13.1",
+    "stylelint": "^5.4.0",
+    "stylelint-config-standard": "^5.0.0",
+    "stylelint-loader": "^5.0.1",
     "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1"
   }
