--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "^5.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "jest-cli": "^11.0.1",
+    "postcss-cssnext": "^2.5.2",
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.0.1",
